improve instructions / G1