@@ -2,10 +2,11 @@
 
 In this practice session we will be looking at memory leaks, garbage collection logs and learn how to make applications faster.
 The main tool we'll be using is VisualVM.
-Start by downloading it from from https://visualvm.github.io/ and unpacking it somewhere.
+Start by downloading it from https://visualvm.github.io/ and unpacking it somewhere.
 
-Before we continue, quickly read through the template application.
-Don't make any changes (yet)!
+We'll use the chess application in this repository for our experiments.
+The application checks if a chess piece can be moved to a given location on the game board.
+To do that, it will try all possible moves using the [breadth-first search](https://en.wikipedia.org/wiki/Breadth-first_search) algorithm.
 
 ## CPU usage sampling
 
@@ -13,30 +14,31 @@ The application as-is runs really slow.
 It would be good to know which parts are slow so we can focus on these.
 One option would be to read the code and guess which parts are slow.
 You can try it, and your guess will likely be wrong (even if you have years of experience).
-Another option is to add System.currentTimeMillis() calls all over the place, but that takes forever and you still might miss something.
+Another option is to add `System.currentTimeMillis()` calls all over the place, but that takes forever and you still might miss something.
 
 Luckily VisualVM has got your back.
 Start it up.
 Next, start the sample chess application.
 Some new entries should appear in VisualVM's application explorer.
-If you started the chess app from IntelliJ, then the right entry is for `com.intellij.rt.execution.application.AppMain`.
-Double click on it to hook VisualVM into it.
+There should be an entry for `chess.App`.
+Double click on it to attach VisualVM.
 
 To measure the time spent in different methods, select the "Sampler" tab.
 Next, choose to sample CPU.
 VisualVM is now recording the activity of each of the threads in your app.
 Enter a newline in the chess application so it would start calculating its things.
 
-You can press the "Snapshot" button any time during your application runtime.
-This will open a detailed view of the sampling results so far.
-Let the application run for at least 15sec and open a snapshot.
-There are different buttons at the bottom of the window - the most useful one is usually the combined view.
+Let the application run for at least 15sec.
+Different thread names should appear under the CPU samples tab, including the main thread.
+Unfold the main thread and it should reveal methods that the main thread has run.
+Keep unfolding the tree and see how much time is spent in each method.
 
-Browse around in the call trees and identify which method is the most likely one to make the application slow.
-Open the code in your IDE and see if you can figure out a way to make it faster.
-Try to fix the application and sample it again to make sure you did something useful.
-Repeat.
-Run the included unit tests to make sure you didn't break the algorithm instead of making it faster.
+Find the method where most of the time is spent.
+Try to figure out where that method is called from.
+Open the code in your IDE and see how the methods work.
+Try to change the application so it will run faster.
+Run the unit tests to make sure that the code is still correct.
+Sample the application again to make sure it now works faster.
 
 *What's the difference between sampling and profiling?
 Profiling will measure each and every method call.
@@ -56,45 +58,55 @@ What is it supposed to look like?
 Why does the memory usage keep increasing?
 What is using up all your memory?
 
-The garbage collector is doing its thing and VisualVM can't help you much with understanding what's going on.
-Fortunately the JVM itself provides some additional logging.
+The **Garbage Collector (GC)** is doing its thing and VisualVM can't help you much with understanding what's going on.
+Fortunately the **Java Virtual Machine (JVM)** itself provides some additional logging.
 Let's turn it on.
 
-Open the run configuration of the sample app from IntelliJ and add the following (space separated) **VM options**
- * -XX:+PrintGCDetails
- * -XX:+PrintGCTimeStamps
+Open the run configuration of the sample app from IntelliJ and add the following to **VM options**: `-Xlog:gc`.
+VM options are command line arguments to the JVM itself.
+If you would start the application from command line, then it would look like `java -Xlog:gc chess.App`.
 
 You can read more about the available options here:
-http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html
+https://docs.oracle.com/javase/9/tools/java.htm
 
-Restart the application and you should see the following lines appearing (Full GC will take a while):
+Restart the application and you should see the following lines appearing:
 ```
-80.766: [GC (Allocation Failure) [PSYoungGen: 77616K->13600K(99840K)] 213364K->176924K(270848K), 0.0091759 secs] [Times: user=0.03 sys=0.00, real=0.01 secs]`
-80.775: [Full GC (Ergonomics) [PSYoungGen: 13600K->0K(99840K)] [ParOldGen: 163324K->170597K(263680K)] 176924K->170597K(363520K), [Metaspace: 3002K->3002K(1056768K)], 0.0910023 secs] [Times: user=0.35 sys=0.01, real=0.09 secs]
+[40.258s][info][gc] GC(6) Pause Young (G1 Evacuation Pause) 162M->109M(374M) 34.441ms
 ```
+This means that the application was stopped for 34.4ms to free up some memory.
+162MB of memory was in use initially and 109MB was in use after the garbage collection.
+In total, the java process has reserved 374MB of memory.
 
-Try to decipher the GC logs using this tutorial (Parallel GC).
-Read the rest of the handbook at home, it's really good!
-https://plumbr.eu/handbook/garbage-collection-algorithms-implementations#parallel-gc
+Different lines may appear when the memory starts running really low:
+```
+[243.701s][info][gc] GC(69) Pause Initial Mark (G1 Evacuation Pause) 447M->433M(456M) 21.436ms
+[243.701s][info][gc] GC(70) Concurrent Cycle
+[244.445s][info][gc] GC(70) Pause Remark 440M->440M(456M) 11.372ms
+[244.459s][info][gc] GC(70) Pause Cleanup 440M->440M(456M) 8.953ms
+[244.463s][info][gc] GC(70) Concurrent Cycle 762.227ms
+```
+It is visible that the amount of used memory is close to the total reserved memory.
+Running the regular garbage collection didn't free up enough memory so the JVM decided to use slower, but more effective algorithms.
+
+https://plumbr.io/java-garbage-collection-handbook is a really good handbook on how the GC works and how to decipher its logs.
 
 Next, let's set setting some limits to our application's memory usage.
-Add the following VM option to the chess app: "-Xmx80M".
+Add the following VM option to the chess app: `-Xmx80M` (keep the GC logging).
 This allows the application to use at most 80MB of memory.
 Restart the application and check the GC logs.
 How long does it take for the application to explode?
 
 ## Heap dumps and hunting memory leaks
 
-Remove the -Xmx option from the run configuration and restart the application.
+Remove the `-Xmx` option from the VM options and restart the application.
 Have it run for 30sec and then click "Heap Dump" from VisualVM monitoring tab (right above the GC graph).
-Taking a heap dump will make a snapshot of the entire heap memory of your application.
+Taking a heap dump will make a snapshot of the entire memory of your application.
 This includes all the objects that have been created and haven't been garbage collected yet.
 
-Clicking the button should pop open a heap dump view.
-Read the summary.
-Next, open the "Classes" tab from the above the summary.
-The view shows how many instances have been created of each class and their sizes.
-Find the class that uses the most memory and double click on it.
-Use the views to figure out which field in which class is storing the objects.
-Finally, try to fix the memory leak.
-Check the GC logs to make sure you fixed it.
+Clicking the button should pop open the heap dump view.
+Open the "Objects" view from the drop-down menu.
+The view shows how many instances have been created of each class and the amount of memory used.
+Find the class that uses the most memory and unfold it.
+Use the references in the tree view to figure out which field in which class is storing the objects.
+
+Can you change the application so that is uses less memory (memory usage no longer climbs indefinitely)?
